--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,8 @@
+@import './App';
+
+
+@import './Tile';
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,9 +30,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #212121;
 }
 
 h1 {
