--- a/src/styles/Tile.scss
+++ b/src/styles/Tile.scss
@@ -1,3 +1,15 @@
+
+// $c1: #001219;
+$c1: #005F73;
+$c2: #0A9396;
+$c3: #94D2BD;
+$c4: #E9D8A6;
+$c5: #EE9B00;
+$c6: #CA6702;
+$c7: #BB3E03;
+$c8: #AE2012;
+$c9: #9B2226;
+
 .Tiles {
   height: calc(100vh - 80px);
   width: 100vw;
@@ -5,8 +17,47 @@
   display: grid;
   grid-template-rows: repeat(var(--rows), 1fr);
   grid-template-columns: repeat(var(--columns), 1fr);
+
+  background: linear-gradient(
+    to right,
+    $c1,
+    $c2,
+    $c3,
+    $c4,
+    $c5,
+    $c6,
+    $c7,
+    $c8,
+    $c9,
+    $c1,
+  );
+  background-size: 200%;
+  animation: slide 10s linear infinite;
 }
 
 .Tile {
-  outline: 1px solid white;
+  cursor: pointer;
+  position: relative;
+
+  &:before {
+    background-color: rgb(20,20,20);
+    content: "";
+    position: absolute;
+    inset: 0.5px;
+  }
+
+  &:hover {
+    opacity: 0.1 !important;
+  }
+}
+
+
+@keyframes slide {
+  from {
+    background-position: 0% center;
+  }
+
+  to {
+    background-position: -200% center;
+  }
 }
