--- a/src/styles/Tile.scss
+++ b/src/styles/Tile.scss
@@ -11,7 +11,7 @@ $c8: #AE2012;
 $c9: #9B2226;
 
 .Tiles {
-  height: calc(100vh - 80px);
+  height: calc(100vh - 40px); // navbar height
   width: 100vw;
 
   display: grid;
