--- a/src/styles/Tile.scss
+++ b/src/styles/Tile.scss
@@ -1,53 +1,167 @@
-
-// $c1: #001219;
-$c1: #005F73;
-$c2: #0A9396;
-$c3: #94D2BD;
-$c4: #E9D8A6;
-$c5: #EE9B00;
-$c6: #CA6702;
-$c7: #BB3E03;
-$c8: #AE2012;
-$c9: #9B2226;
+$c1: #005f73;
+$c2: #0a9396;
+$c3: #94d2bd;
+$c4: #ee9b00;
+$c5: #ca6702;
+$c6: #bb3e03;
+$c7: #ae2012;
 
 .Tiles {
-  height: calc(100vh - 40px); // navbar height
+  height: 100vh;
   width: 100vw;
+  cursor: pointer;
+  min-width: 600px;
 
-  display: grid;
-  grid-template-rows: repeat(var(--rows), 1fr);
-  grid-template-columns: repeat(var(--columns), 1fr);
+  &__background {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    min-width: 600px;
 
-  background: linear-gradient(
-    to right,
-    $c1,
-    $c2,
-    $c3,
-    $c4,
-    $c5,
-    $c6,
-    $c7,
-    $c8,
-    $c9,
-    $c1,
-  );
-  background-size: 200%;
-  animation: slide 10s linear infinite;
+    &-image {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      transition: opacity 1.2s linear, background-position 0.7s ease-out;
+      -webkit-filter: blur(4px);
+      -moz-filter: blur(4px);
+      -o-filter: blur(4px);
+      -ms-filter: blur(4px);
+      filter: blur(4px);
+      background-size: 120%;
+    }
+
+    &-overlay {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      background: #000000;
+      opacity: 0.4;
+    }
+  }
+  
+  &__main {
+    height: 100%;
+    display: grid;
+    grid-template-rows: repeat(var(--rows), 1fr);
+    grid-template-columns: repeat(var(--columns), 1fr);
+    animation: slide 20s linear infinite;
+
+    &--gradient {
+      background: linear-gradient(
+        to right,
+        $c1,
+        $c2,
+        $c4,
+        $c5,
+        $c6,
+        $c7,
+        $c1,
+      );
+      background-size: 200%;
+    }
+
+    &--toggled {
+      .Tile {
+        opacity: 0;
+      }
+    }
+  }
+
+  &__body {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s linear;
+    font-size: 50px;
+    color: #cccccc;
+    user-select: none;
+    pointer-events: none;
+
+    &--show {
+      opacity: 1;
+      transition-delay: 1s;
+    }
+
+    &-quote {
+      max-width: 60%;
+      transition: opacity 1s linear;
+
+      &--fade {
+        opacity: 0;
+      }
+
+      &-text {
+        font-size: 50px;
+        font-family: "Sacramento";
+      }
+
+      &-author {
+        display: flex;
+        justify-content: end;
+        font-size: 30px;
+        font-family: "Bebas Neue";
+      }
+    }
+  }
+
+  &__key {
+    &-sc {
+      margin: 0 16px;
+    }
+
+    &-sc-icon {
+      background-color: transparentize(#cccccc, 0.7);
+      color: #cccccc;
+    }
+
+    &-sc-label {
+      color: #cccccc;
+    }
+  }
+
+  &__footer {
+    display: flex;
+    opacity: 0;
+    position: absolute;
+    bottom: 24px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: opacity 1s linear;
+    pointer-events: none;
+
+    &--slow-load {
+      transition-delay: 2s;
+    }
+
+    &--show {
+      opacity: 1;
+    }
+  }
 }
 
 .Tile {
-  cursor: pointer;
   position: relative;
 
   &:before {
-    background-color: rgb(20,20,20);
+    background-color: #000000;
     content: "";
     position: absolute;
-    inset: 0.5px;
+    inset: 2px;
   }
 
   &:hover {
     opacity: 0.1 !important;
+
+    &:before {
+      border-radius: 4px;
+    }
   }
 }
 
@@ -59,5 +173,33 @@ $c9: #9B2226;
 
   to {
     background-position: -200% center;
+  }
+}
+
+
+@media screen and (max-width: $tablet-width) {
+  .Tiles {
+    &__body-quote {
+      max-width: 80%;
+    }
+
+    &__footer {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 8px;
+    }
+  }
+}
+
+@media screen and (max-width: $min-device-width) {
+  .Tiles {
+    &__body-quote {
+      max-width: 100%;
+    }
+
+    &__footer {
+      display: none;
+    }
   }
 }
