--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Noto+Color+Emoji&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap');
+
+@import './variables';
 @import './App';
-
-
+@import './Key';
 @import './Tile';
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Poppins", "Hanken Grotesk", "Montserrat", system-ui;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: $dark-gray;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -71,3 +73,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
