--- a/src/styles/Tile.scss
+++ b/src/styles/Tile.scss
@@ -80,7 +80,7 @@ $c7: #ae2012;
     opacity: 0;
     transition: opacity 1s linear;
     font-size: 50px;
-    color: #cccccc;
+    color: $body-color;
     user-select: none;
     pointer-events: none;
 
@@ -119,23 +119,23 @@ $c7: #ae2012;
       &:hover {
         .Tiles__key-sc {
           &-icon {
-            background-color: transparentize(#cccccc, 0.3);
+            background-color: transparentize($body-color, 0.3);
           }
 
           &-label {
-            color: #ffffff;
+            color: $white;
           }
         }
       }
     }
 
     &-sc-icon {
-      background-color: transparentize(#cccccc, 0.7);
-      color: #cccccc;
+      background-color: transparentize($body-color, 0.7);
+      color: $white;
     }
 
     &-sc-label {
-      color: transparentize(#cccccc, 0.3);
+      color: transparentize($body-color, 0.3);
     }
   }
 
@@ -164,7 +164,7 @@ $c7: #ae2012;
   position: relative;
 
   &:before {
-    background-color: #000000;
+    background-color: $black;
     content: "";
     position: absolute;
     inset: 2px;
