--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,13 @@
 $navy: #264653;
-$grey: #2A9D8F;
+$gray: #2A9D8F;
 $yellow: #E9C46A;
 $orange: #F4A261;
 $red: #E76F51;
 $dark-gray: #292C35;
+
+$body-color: #cccccc;
+$black: #000000;
+$white: #ffffff;
 
 $min-device-width: 600px;
 $tablet-width: 1024px;
