--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Noto+Color+Emoji&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap');
 
 @import './variables';
+
 @import './App';
+@import './Home';
+@import './Navbar';
 @import './Key';
 @import './Tile';
 
 :root {
-  font-family: "Poppins", "Hanken Grotesk", "Montserrat", system-ui;
+  font-family: "Hanken Grotesk", "Poppins", "Montserrat", system-ui;
   line-height: 1.5;
   font-weight: 400;
 
