--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -9,7 +9,7 @@
 @import './Tile';
 
 :root {
-  font-family: "Hanken Grotesk", "Poppins", "Montserrat", system-ui;
+  font-family: "Poppins", "Hanken Grotesk", "Montserrat", system-ui;
   line-height: 1.5;
   font-weight: 400;
 
@@ -24,7 +24,7 @@
 }
 
 a {
-  font-weight: 500;
+  font-weight: 400;
   color: #646cff;
   text-decoration: inherit;
 }
