--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -7,7 +7,17 @@
   height: 60px;
   font-size: 18px;
 
+  &__logo {
+    font-size: 24px;
+  }
+
   &__link {
     margin: 8px 16px;
+  }
+}
+
+@media screen and (max-width: $min-device-width) {
+  .Navbar {
+    display: none;
   }
 }
