--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -3,7 +3,9 @@
 @import './variables';
 
 @import './App';
+@import './Button';
 @import './Home';
+@import './HamburgerMenu';
 @import './Navbar';
 @import './Key';
 @import './Tile';
@@ -14,7 +16,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: $body-color;
   background-color: $dark-gray;
 
   font-synthesis: none;
@@ -25,11 +27,15 @@
 
 a {
   font-weight: 400;
-  color: #646cff;
+  color: $light-teal;
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  color: $teal;
+  text-decoration: underline;
+  text-underline-offset: 12px;
+  text-decoration-color: $teal;
 }
 
 body {
@@ -37,43 +43,11 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #212121;
+  background-color: $dark-gray;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
