--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,10 +1,24 @@
 .Button {
+  border-radius: 4px;
+  border: none;
+  background: $teal;
+  color: $body-color;
+  font-size: 20px;
+  padding: 8px 16px;
+  user-select: none;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $dark-teal;
+    color: $light-teal;
+  }
+
   &--icon {
-    border-radius: 8px;
-    border: none;
-    font-family: inherit;
     background: transparent;
-    cursor: pointer;
-    font-size: 24px;
+    padding: 0;
+
+    &:hover {
+      background-color: transparent;
+    }
   }
 }
