Add teal colours and amend styles

--- a/src/styles/HamburgerMenu.scss
+++ b/src/styles/HamburgerMenu.scss
@@ -7,9 +7,14 @@
   }
 
   &__button {
+    width: 40px;
+    height: 40px;
+
     &:hover {
+      background: transparentize($white, 0.9);
+
       i {
-        color: $teal;
+        color: $teal-1;
       }
     }
   }
@@ -21,12 +26,12 @@
     position: absolute;
     flex-direction: column;
     align-items: center;
-    background: $teal;
+    background: $teal-3;
     width: 50%;
     min-width: 200px;
-    border-radius: 4px;
+    border-radius: 8px;
     right: 24px;
-    top: 50px;
+    top: 52px;
   }
 
   &__link {
@@ -39,16 +44,16 @@
     &:hover {
       cursor: pointer;
       text-decoration: none;
-      background-color: $dark-navy;
+      background-color: $teal-5;
       color: $white;
     }
 
     &:first-child {
-      border-radius: 4px 4px 0 0;
+      border-radius: 8px 8px 0 0;
     }
     
     &:last-child {
-      border-radius: 0 0 4px 4px;
+      border-radius: 0 0 8px 8px;
     }
   }
 }
