--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,16 +1,26 @@
 .Button {
-  border-radius: 4px;
+  border-radius: 24px;
   border: none;
-  background: $teal;
+  background: $teal-3;
   color: $body-color;
   font-size: 20px;
-  padding: 8px 16px;
+  padding: 12px 16px;
   user-select: none;
   cursor: pointer;
 
   &:hover {
-    background-color: $dark-teal;
-    color: $light-teal;
+    background-color: $white;
+    color: $teal-5;
+  }
+
+  &--secondary {
+    background: $white;
+    color: $teal-5;
+
+    &:hover {
+      background-color: $teal-3;
+      color: $white;
+    }
   }
 
   &--icon {
