--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,22 +1,25 @@
-$gray: #2A9D8F;
-$dark-gray: #292C35;
-$body-color: #cccccc;
+$teal-1: #6fffe8;
+$teal-2: #5bc0bf;
+$teal-3: #3a506c;
+$teal-4: #1c2542;
+$teal-5: #0b132c;
+
+$gray: #2a9d8f;
+$dark-gray: #292c35;
+$body-color: $teal-2;
 $black: #000000;
 $white: #ffffff;
 
 $min-device-width: 854px;
 $tablet-width: 1024px;
 
-$dark-navy: #001220;
-$dark-teal: #005f74;
-$teal: #0a9397;
-$light-teal: #94d2be;
 $beige: #e9d8a7;
 $yellow: #ee9b01;
 $orange: #ca6703;
 $dark-orange: #bb3e04;
 $red: #ae2013;
 $dark-red: #9b2227;
+
 
 @mixin box-shadow {
   -webkit-box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.5);
