--- a/src/styles/Tile.scss
+++ b/src/styles/Tile.scss
@@ -160,6 +160,7 @@ $c7: #ae2012;
 
 .Tile {
   position: relative;
+  transition: opacity 1s ease-in-out;
 
   &:before {
     background-color: $black;
@@ -170,6 +171,7 @@ $c7: #ae2012;
 
   &:hover {
     opacity: 0.1 !important;
+    transition: opacity 0s linear;
 
     &:before {
       border-radius: 4px;
