Update styles for home page

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,15 +2,18 @@
   margin-top: 24px;
 
   &__section {
+    color: $body-color;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: $body-color;
 
     &-pic {
       border-radius: 50%;
       max-width: 400px;
+    }
+
+    &-info {
+      margin-left: 48px;
     }
 
     &-text-main {
@@ -22,7 +25,11 @@
       font-size: 40px;
     }
 
-    &-button-container {
+    &-text-2 {
+      font-size: 30px;
+    }
+
+    &-buttons {
       .Home__section-button {
         margin: 4px 16px;
       }
@@ -35,7 +42,7 @@
 
         &:hover {
           i {
-            color: $teal-3;
+            color: $teal-2;
           }
         }
       }
@@ -48,5 +55,21 @@
     width: 100%;
     display: flex;
     justify-content: center;
+  }
+}
+
+
+@media screen and (max-width: $min-device-width) {
+  .Home {
+    &__section {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      &-info {
+        margin: 24px 0 0 0;
+        text-align: center;
+      }
+    }
   }
 }
