--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -2,11 +2,12 @@
   border-radius: 24px;
   border: none;
   background: $teal-3;
-  color: $body-color;
+  color: $teal-1;
   font-size: 20px;
   padding: 12px 16px;
   user-select: none;
   cursor: pointer;
+  border: 1px solid transparent;
 
   &:hover {
     background-color: $white;
@@ -14,17 +15,14 @@
   }
 
   &--secondary {
-    background: $white;
-    color: $teal-5;
-
-    &:hover {
-      background-color: $teal-3;
-      color: $white;
-    }
+    background: transparent;
+    border: 1px solid $teal-1;
+    color: $teal-1;
   }
 
   &--icon {
     background: transparent;
+    border: 0;
     padding: 0;
 
     &:hover {
