Update border radius vars

--- a/src/styles/Key.scss
+++ b/src/styles/Key.scss
@@ -14,7 +14,7 @@
     font-family: "Ubuntu Mono", monospace;
     font-size: 14px;
     padding: 4px 8px;
-    border-radius: 8px;
+    border-radius: $border-radius-box-small;
     text-align: center;
     font-weight: bold;
     background: #646669;
