--- a/src/styles/Tooltip.scss
+++ b/src/styles/Tooltip.scss
@@ -6,7 +6,7 @@
 
   &__tooltip {
     position: absolute;
-    border-radius: 8px;
+    border-radius: $border-radius-box-small;
     padding: 4px 8px;
     background: black;
     color: white;
