--- a/src/styles/HamburgerMenu.scss
+++ b/src/styles/HamburgerMenu.scss
@@ -49,11 +49,11 @@
     }
 
     &:first-child {
-      border-radius: 8px 8px 0 0;
+      border-radius: $border-radius-box-small $border-radius-box-small 0 0;
     }
     
     &:last-child {
-      border-radius: 0 0 8px 8px;
+      border-radius: 0 0 $border-radius-box-small $border-radius-box-small;
     }
   }
 }
