--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,8 +1,6 @@
 .Button {
-  border-radius: 24px;
+  border-radius: $border-radius-button;
   border: none;
-  background: $teal-3;
-  color: $teal-1;
   font-size: 20px;
   padding: 12px 16px;
   user-select: none;
@@ -14,7 +12,15 @@
     color: $teal-5;
   }
 
+  &--primary {
+    min-width: 160px;
+    background: $teal-3;
+    border: 1px solid transparent;
+    color: $teal-1;
+  }
+
   &--secondary {
+    min-width: 160px;
     background: transparent;
     border: 1px solid $teal-1;
     color: $teal-1;
@@ -22,6 +28,7 @@
 
   &--icon {
     background: transparent;
+    color: $teal-1;
     border: 0;
     padding: 0;
 
