--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,11 +1,12 @@
 .Button {
-  border-radius: $border-radius-button;
+  border-radius: $border-radius-box;
   border: none;
-  font-size: 20px;
+  font-size: $font-size-md;
   padding: 12px 16px;
   user-select: none;
   cursor: pointer;
   border: 1px solid transparent;
+  transition: all 0.3s ease;
 
   &:hover {
     background-color: $white;
