--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Noto+Color+Emoji&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Mono&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap');
 
 @import './variables';
 
@@ -13,9 +13,9 @@
 @import './Tooltip';
 
 :root {
-  font-family: "Poppins", "Hanken Grotesk", "Montserrat", system-ui;
+  font-family: $font-family-regular;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: $font-weight-regular;
 
   color-scheme: light dark;
   color: $body-color;
@@ -27,17 +27,36 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 400;
-  color: $teal-1;
-  text-decoration: inherit;
+* {
+  font-family: $font-family-regular;
 }
 
-a:hover {
-  color: $teal-3;
-  text-decoration: underline;
-  text-underline-offset: 12px;
-  text-decoration-color: $teal-3;
+a {
+  font-weight: $font-weight-regular;
+  color: $teal-1;
+  text-decoration: none;
+  position: relative;
+
+  &:after {
+    bottom: -12px;
+    content: "";
+    display: block;
+    height: 1px;
+    left: 50%;
+    position: absolute;
+    background: $teal-2;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+
+  &:hover {
+    color: $teal-2;
+  
+    &:after {
+      width: 100%; 
+      left: 0;
+    }
+  }
 }
 
 p {
