--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -8,23 +8,16 @@
   border: 1px solid transparent;
   transition: all 0.3s ease;
 
-  &:hover {
-    background-color: $white;
-    color: $teal-5;
-  }
-
-  &--primary {
-    min-width: 160px;
-    background: $teal-3;
-    border: 1px solid transparent;
-    color: $teal-1;
-  }
-
-  &--secondary {
+  &--default {
     min-width: 160px;
     background: transparent;
-    border: 1px solid $teal-1;
-    color: $teal-1;
+    border: 1px solid $yellow;
+    color: $yellow;
+  }
+
+  &:hover {
+    background-color: $yellow;
+    color: $teal-4;
   }
 
   &--icon {
