--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,22 +4,18 @@ $teal-3: #3a506c;
 $teal-4: #1c2542;
 $teal-5: #0b132c;
 
+$beige: #e9d8a7;
+$yellow: #ee9b01;
 $gray: #2a9d8f;
 $dark-gray: #292c35;
 $body-color: $teal-2;
 $black: #000000;
 $white: #ffffff;
 
+$nav-bar-height: 100px;
+
 $min-device-width: 854px;
 $tablet-width: 1024px;
-
-$beige: #e9d8a7;
-$yellow: #ee9b01;
-$orange: #ca6703;
-$dark-orange: #bb3e04;
-$red: #ae2013;
-$dark-red: #9b2227;
-
 
 $border-radius-box-small: 8px;
 $border-radius-box: 12px;
