--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 60px;
+  height: $nav-bar-height;
   font-size: $font-size-md;
 
   &__logo {
