--- a/src/styles/HamburgerMenu.scss
+++ b/src/styles/HamburgerMenu.scss
@@ -41,6 +41,10 @@
     text-align: center;
     font-size: $font-size-xl;
 
+    &:after {
+      display: none;
+    }
+
     &:hover {
       cursor: pointer;
       text-decoration: none;
