--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -41,10 +41,24 @@
         max-width: 50%;
       }
 
-      &-pic {
+      &-headshot {
         border-radius: $border-radius-box;
         max-width: 400px;
+        max-height: 400px;
         margin-right: 24px;
+        overflow: hidden;
+
+        &-pic {
+          width: 100%;
+          height: 100%;
+          border-radius: $border-radius-box;
+          transition: transform 0.3s ease;
+          transform: scale(1.1);
+
+          &:hover {
+            transform: scale(1);
+          }
+        }
       }
       
       &-box {
