--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -15,11 +15,6 @@
     color: $yellow;
   }
 
-  &:hover {
-    background-color: $yellow;
-    color: $teal-4;
-  }
-
   &--icon {
     background: transparent;
     color: $teal-1;
@@ -29,5 +24,33 @@
     &:hover {
       background-color: transparent;
     }
+  }
+
+  &--link {
+    display: inline-block;
+    text-align: center;
+    min-width: 100px;
+
+    &:after {
+      display: none;
+    }
+  }
+
+  &--wiggle {
+    &:hover {
+      .Button__emoji--wiggle {
+        animation: wiggle 1.2s infinite;
+      }
+    }
+  }
+
+  &__emoji {
+    display: inline-block;
+    margin-left: 4px;
+  }
+
+  &:hover {
+    background-color: $yellow;
+    color: $teal-4;
   }
 }
