--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -21,15 +21,54 @@
       align-items: center;
     }
 
-    &-heading {
-      text-align: center;
-      margin-bottom: 24px;
+    &--contact {
+      .Home__section {
+        &-info-main {
+          text-align: center;
+          max-width: 60%;
+        }
+
+        &-buttons {
+          text-align: center;
+        }
+      }
     }
 
-    &-pic {
-      border-radius: 50%;
-      max-width: 400px;
-      margin: 0 24px;
+    &-heading {
+      font-family: $font-family-mono;
+      text-align: center;
+      margin-bottom: 24px;
+      position: relative;
+
+      &:before,
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 1px;
+        width: 100px;
+        background: $beige;
+        transition: all 0.3s ease;
+        top: 50%;
+      }
+
+      &:before {
+        left: -120px;
+      }
+
+      &:after {
+        right: -120px;
+      }
+
+      &:hover {
+        &:before {
+          left: -150px;
+        }
+
+        &:after {
+          right: -150px;
+        }
+      }
     }
 
     &-info {
@@ -53,10 +92,9 @@
           height: 100%;
           border-radius: $border-radius-box;
           transition: transform 0.3s ease;
-          transform: scale(1.1);
 
           &:hover {
-            transform: scale(1);
+            transform: scale(1.1);
           }
         }
       }
@@ -86,6 +124,12 @@
         &-details {
           text-align: center;
         }
+      }
+
+      &-skills {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        gap: 32px 48px;
       }
     }
 
