--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -38,8 +38,8 @@ $font-weight-medium: $font-weight-6;
 $font-weight-heavy: $font-weight-7;
 $font-weight-heaviest: $font-weight-9;
 
-$font-family-regular: "Poppins", "Montserrat", sans-serif;
-$font-family-mono: "PT Mono", monospace;
+$font-family-regular: "Montserrat", sans-serif;
+$font-family-mono: "Courier Prime", monospace;
 
 $font-size-xxs: 10px;
 $font-size-xs: 12px;
