--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -5,13 +5,14 @@
 
 @import './App';
 @import './Home';
+@import './Logo';
+@import './Skills';
+@import './Jobs';
 
 @import './Button';
 @import './HamburgerMenu';
 @import './Navbar';
 @import './Key';
-@import './Logo';
-@import './Skills';
 @import './Tile';
 @import './Tooltip';
 
