--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,4 +5,12 @@
   &__navbar {
     padding: 0 24px;
   }
+
+  &__footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 24px 0;
+    font-size: $font-size-sm;
+  }
 }
