--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -56,6 +56,7 @@
       text-align: center;
       margin-bottom: 40px;
       position: relative;
+      color: $beige;
 
       &:before,
       &:after {
@@ -64,7 +65,7 @@
         position: absolute;
         height: 1px;
         width: 100px;
-        background: $beige;
+        background: $body-color;
         transition: all 0.3s ease;
         top: 50%;
       }
