--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -6,8 +6,9 @@
 @import './App';
 @import './Home';
 @import './Logo';
-@import './Skills';
-@import './Jobs';
+@import './Skill';
+@import './Job';
+@import './Project';
 
 @import './Button';
 @import './HamburgerMenu';
