--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,13 @@
 .App {
   display: block;
   width: 100vw;
+  height: 100%;
+  transition: height 3s ease;
+
+  &--loading {
+    height: 0;
+    overflow: hidden;
+  }
 
   &__navbar {
     padding: 0 24px;
@@ -12,5 +19,19 @@
     justify-content: center;
     margin: 24px 0;
     font-size: $font-size-sm;
+  }
+}
+
+.App-Loader {
+  height: 0;
+  width: 100vw;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transition: height 3s ease;
+
+  &--loading {
+    display: flex;
+    height: 100vh;
   }
 }
