--- a/src/styles/Logo.scss
+++ b/src/styles/Logo.scss
@@ -30,12 +30,16 @@
     .Logo {
       &__left {
         opacity: 0;
+        animation-delay: 400ms;
         animation: slide-left-rotate 2s ease;
+        animation-fill-mode: forwards;
       }
 
       &__right {
         opacity: 0;
+        animation-delay: 400ms;
         animation: slide-right-rotate 2s ease;
+        animation-fill-mode: forwards;
       }
     }
   }
