--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -142,21 +142,21 @@
       }
     }
 
-    &-text-main {
+    &-line1 {
+      font-family: $font-family-mono;
+      font-size: $font-size-lg;
+      margin-bottom: 16px;
+    }
+
+    &-line2 {
       font-size: $font-size-heading;
       font-weight: $font-weight-heavy;
       color: $beige;
     }
 
-    &-text-1 {
+    &-line3 {
       font-size: $font-size-xl;
       margin: 16px 0;
-    }
-
-    &-text-2 {
-      font-family: $font-family-mono;
-      font-size: $font-size-lg;
-      margin-bottom: 16px;
     }
 
     &-text-para {
@@ -205,6 +205,19 @@
     display: flex;
     justify-content: center;
     margin: 24px 0;
+  }
+}
+
+.App--loading {
+  .Home__section {
+    &-line1,
+    &-line2,
+    &-line3,
+    &-line4 {
+      opacity: 0;
+      animation: slide-up 0.5s ease;
+      animation-fill-mode: forwards;
+    }
   }
 }
 
