--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,6 +1,32 @@
 .Home {
   margin: 0 200px;
 
+  &--loading {
+    .Home__section {
+      &-line1,
+      &-line2,
+      &-line3,
+      &-line4 {
+        animation: slide-up 1s ease;
+        animation-fill-mode: forwards;
+      }
+    }
+  }
+
+  &--standby {
+    height: 100vh;
+    overflow: hidden;
+
+    .Home__section {
+      &-line1,
+      &-line2,
+      &-line3,
+      &-line4 {
+        opacity: 0;
+      }
+    }
+  }
+
   &__section {
     color: $body-color;
     height: 100vh;
@@ -205,19 +231,6 @@
     display: flex;
     justify-content: center;
     margin: 24px 0;
-  }
-}
-
-.App--loading {
-  .Home__section {
-    &-line1,
-    &-line2,
-    &-line3,
-    &-line4 {
-      opacity: 0;
-      animation: slide-up 0.5s ease;
-      animation-fill-mode: forwards;
-    }
   }
 }
 
