--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -105,8 +105,12 @@
     opacity: 0;
   }
 
+  50% {
+    opacity: 0;
+  }
+
   80% {
-    transform: translateY(20px);
+    transform: translateY(10px);
     opacity: 0.8;
   }
 
@@ -122,8 +126,12 @@
     opacity: 0;
   }
 
+  50% {
+    opacity: 0;
+  }
+
   80% {
-    transform: translateY(-20px);
+    transform: translateY(-10px);
     opacity: 0.8;
   }
 
