--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -44,7 +44,7 @@
       display: flex;
       align-items: center;
       margin-top: -$nav-bar-height;
-      height: 100vh;
+      min-height: 100vh;
     }
 
     &--about,
@@ -54,8 +54,9 @@
     &--contact {
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
-      min-height: 80vh;
+      min-height: 70vh;
     }
 
     &--projects {
