--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -57,6 +57,18 @@
       justify-content: center;
       align-items: center;
       min-height: 70vh;
+
+      &:hover {
+        .Home__section-heading {
+          &:before {
+            left: -150px;
+          }
+  
+          &:after {
+            right: -150px;
+          }
+        }
+      }
     }
 
     &--projects {
@@ -125,16 +137,6 @@
 
       &:after {
         right: -120px;
-      }
-
-      &:hover {
-        &:before {
-          left: -150px;
-        }
-
-        &:after {
-          right: -150px;
-        }
       }
     }
 
@@ -241,7 +243,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 24px 0;
+    margin-top: 80px;
   }
 }
 
