--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,6 +12,17 @@
 
   &__navbar {
     padding: 0 24px;
+    z-index: $z-layer-navbar;
+    background: $dark-gray;
+    position: sticky;
+    top: -100px;
+    transition: all 0.5s ease;
+
+    &--sticky {
+      @include box-shadow-light;
+
+      top: 0px;
+    }
   }
 
   &__footer {
