--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,10 @@
     height: 0;
     overflow: hidden;
     background: $teal-5;
+
+    .App__navbar {
+      background: $teal-5;
+    }
   }
 
   &__navbar {
@@ -16,7 +20,7 @@
     background: $dark-gray;
     position: sticky;
     top: -100px;
-    transition: all 0.5s ease;
+    transition: all 0.5s ease, background 0.7s ease;
 
     &--sticky {
       @include box-shadow-light;
