--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -35,12 +35,14 @@
   &__logo {
     opacity: 0;
     font-size: $font-size-xl;
+    cursor: pointer;
   }
 
   &__link {
     opacity: 0;
     font-size: $font-size-lg;
     margin: 8px 16px;
+    cursor: pointer;
   }
 
   &__button {
@@ -50,6 +52,7 @@
     padding: 8px 12px;
     font-size: $font-size-lg;
     border-radius: $border-radius-box-small;
+    cursor: pointer;
   }
 }
 
