Make homepage responsive

--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -20,6 +20,7 @@
     color: $teal-1;
     border: 0;
     padding: 0;
+    font-size: $font-size-icon;
 
     &:hover {
       background-color: transparent;
