--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,8 +14,10 @@ $white: #ffffff;
 
 $nav-bar-height: 100px;
 
-$min-device-width: 854px;
+$min-device-width: 564px;
+$small-device-width: 854px;
 $tablet-width: 1024px;
+$tablet-large-width: 1440px;
 
 $border-radius-box-small: 8px;
 $border-radius-box: 12px;
