--- a/src/styles/HamburgerMenu.scss
+++ b/src/styles/HamburgerMenu.scss
@@ -7,8 +7,8 @@
   }
 
   &__button {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
 
     &:hover {
       background: transparentize($white, 0.9);
@@ -31,7 +31,7 @@
     min-width: 200px;
     border-radius: 8px;
     right: 24px;
-    top: 52px;
+    top: 84px;
   }
 
   &__link {
@@ -62,7 +62,7 @@
   }
 }
 
-@media screen and (max-width: $min-device-width) {
+@media screen and (max-width: $small-device-width) {
   .Hamburger-Menu {
     display: flex;
     justify-content: space-between;
