--- a/src/styles/HamburgerMenu.scss
+++ b/src/styles/HamburgerMenu.scss
@@ -2,6 +2,63 @@
   display: none;
   height: $nav-bar-height;
 
+  &__slideover {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 50vw;
+    height: 100vh;
+    transition: right 0.5s ease;
+    background: $teal-3;
+
+    &--open {
+      @include box-shadow-light;
+
+      right: 0;
+    }
+
+    &-close {
+      display: flex;
+      justify-content: end;
+      margin: 24px
+    }
+
+    &-links {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background: $teal-3;
+      width: 100%;
+      padding: 24px 0;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  
+    &-link {
+      padding: 24px 0;
+      user-select: none;
+      width: 100%;
+      text-align: center;
+      font-size: $font-size-xxl;
+  
+      &:after {
+        display: none;
+      }
+  
+      &:hover {
+        cursor: pointer;
+        text-decoration: none;
+        background-color: $teal-5;
+        color: $white;
+      }
+    }
+
+    &-button {
+      margin: 24px;
+    }
+  }
+
   &__logo {
     font-size: $font-size-icon;
   }
@@ -16,48 +73,6 @@
       i {
         color: $teal-1;
       }
-    }
-  }
-
-  &__links {
-    @include box-shadow;
-
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    align-items: center;
-    background: $teal-3;
-    width: 50%;
-    min-width: 200px;
-    border-radius: 8px;
-    right: 24px;
-    top: 84px;
-  }
-
-  &__link {
-    padding: 8px 0;
-    user-select: none;
-    width: 100%;
-    text-align: center;
-    font-size: $font-size-xl;
-
-    &:after {
-      display: none;
-    }
-
-    &:hover {
-      cursor: pointer;
-      text-decoration: none;
-      background-color: $teal-5;
-      color: $white;
-    }
-
-    &:first-child {
-      border-radius: $border-radius-box-small $border-radius-box-small 0 0;
-    }
-    
-    &:last-child {
-      border-radius: 0 0 $border-radius-box-small $border-radius-box-small;
     }
   }
 }
