--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -41,7 +41,7 @@ $font-weight-heavy: $font-weight-7;
 $font-weight-heaviest: $font-weight-9;
 
 $font-family-regular: "Montserrat", sans-serif;
-$font-family-mono: "Courier Prime", monospace;
+$font-family-mono: "Kode Mono", "Courier Prime", monospace;
 
 $font-size-xxs: 10px;
 $font-size-xs: 12px;
@@ -52,7 +52,7 @@ $font-size-xl: 20px;
 $font-size-xxl: 24px;
 $font-size-icon: 32px;
 $font-size-subheading: 40px;
-$font-size-heading: 72px;
+$font-size-heading: 80px;
 
 $z-layer-navbar: 100;
 
